--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "bootstrap"]
 	path = bootstrap
-	url = git://github.com/twitter/bootstrap.git
+	url = https://github.com/twitter/bootstrap.git
 [submodule "orbitron"]
 	path = orbitron
 	url = https://github.com/theleagueof/orbitron.git
